<resources>
    <string name="app_name">Sydney Opera House Diorama Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_status">Device Status:</string>
    <string name="unavailable">Unavailable</string>
    <string name="front">Front</string>
    <string name="inside">Inside</string>
    <string name="left">Left</string>
    <string name="led">LED</string>
    <string name="right">Right</string>
    <string name="turn_on_all">Turn On All</string>
    <string name="luminosity">Luminosity</string>
    <string name="back">Back</string>
</resources>