<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_sm"
    tools:context=".HomeFragment">

    <!-- DEVICE STATUS CARD -->
    <androidx.cardview.widget.CardView
        android:id="@+id/device_status_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_md">

            <TextView
                android:id="@+id/device_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_status"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/device_status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"
                android:layout_toEndOf="@id/device_status_title"
                android:layout_marginStart="@dimen/space_sm"
                android:textSize="16sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/visitors_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_status_card"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_sm"
        android:weightSum="3">

        <!-- Visitors Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/visitors_count_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:radius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_sm"
                android:gravity="center">

                <TextView
                    android:id="@+id/visitors_count_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/visitors_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Visitors"
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:gravity="center" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Claps Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/claps_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/space_sm"
            android:elevation="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:radius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_sm"
                android:gravity="center">

                <TextView
                    android:id="@+id/claps_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/claps_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Claps"
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:gravity="center" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lums_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/space_sm"
            android:elevation="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:radius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_sm"
                android:gravity="center">

                <TextView
                    android:id="@+id/lums_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/lums_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luminosity"
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:gravity="center" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- LED CONTROLLER CARD -->
    <androidx.cardview.widget.CardView
        android:id="@+id/led_controller_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_below="@id/visitors_section"
        android:clickable="true"
        android:layout_marginTop="@dimen/space_sm"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_sm">

            <!-- LED TITLE -->
            <TextView
                android:id="@+id/led_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/led" />

            <!-- LED CONTROL GRID (2 columns) -->
            <GridLayout
                android:id="@+id/led_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/led_title"
                android:layout_marginTop="@dimen/space_sm"
                android:columnCount="2"
                android:alignmentMode="alignMargins"
                android:useDefaultMargins="true">

                <!-- FRONT -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/front_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:elevation="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_sm">

                        <TextView
                            android:id="@+id/front_switch_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/front"
                            android:textSize="16sp"
                            android:layout_centerVertical="true" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/front_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/front_switch_title"
                            android:layout_marginStart="8dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <!-- BACK -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/inside_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:elevation="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_sm">

                        <TextView
                            android:id="@+id/inside_switch_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/inside"
                            android:textSize="16sp"
                            android:layout_centerVertical="true" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/inside_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/inside_switch_title"
                            android:layout_marginStart="8dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <!-- LEFT -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/left_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:elevation="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_sm">

                        <TextView
                            android:id="@+id/left_switch_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/left"
                            android:textSize="16sp"
                            android:layout_centerVertical="true" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/left_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/left_switch_title"
                            android:layout_marginStart="8dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <!-- RIGHT -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/back_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:elevation="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_sm">

                        <TextView
                            android:id="@+id/back_switch_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/back"
                            android:textSize="16sp"
                            android:layout_centerVertical="true" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/back_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/back_switch_title"
                            android:layout_marginStart="8dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <!-- TURN ON ALL BUTTON -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_turn_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="@dimen/space_sm"
                    android:text="@string/turn_on_all"
                    app:cornerRadius="4dp" />
            </GridLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
